스타일 변경

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       .remark-slide-content h3 { font-size: 1.6em; }
 
       .footnote {
+        color: #B5B5B5;
         position: absolute;
         bottom: 3em;
+        right: 3em;
       }
 
       .author {
@@ -63,7 +65,7 @@
         padding: 15px;
       }
       .inverse {
-        background: #272822;
+        background: #263E62;
         color: #777872;
         text-shadow: 0 0 20px #333;
       }
@@ -75,7 +77,7 @@
       .title_upper {
         font-family: 'Jeju Gothic';
         font-size: 1em;
-        color: #777872;
+        color: #F3F3F3;
       }
 
       img {
