스타일 변경

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
       @import url(https://fonts.googleapis.com/earlyaccess/jejugothic.css);
 
       body {
-        font-family: 'Noto Sans', 'Jeju Gothic';
+        font-family: 'Noto Sans';
       }
       h1, h2, h3 {
-        font-family: 'Noto Sans';
+        font-family: 'Jeju Gothic';
         font-weight: 400;
         margin-bottom: 0;
+      }
+      .remark-slide-content {
+        background: #616161;
+        color: #F3F3F3
       }
       .remark-slide-content h1 { font-size: 3em; }
       .remark-slide-content h2 { font-size: 2em; }
@@ -23,8 +27,8 @@
       .footnote {
         color: #B5B5B5;
         position: absolute;
-        bottom: 3em;
-        right: 3em;
+        bottom: 2em;
+        right: 2em;
       }
 
       .author {
@@ -37,7 +41,7 @@
       .red { color: #fa0000; }
       .large { font-size: 2em; }
       a, a > code {
-        color: rgb(249, 38, 114);
+        color: #D5DD94;
         text-decoration: none;
       }
       code {
@@ -66,7 +70,7 @@
       }
       .inverse {
         background: #263E62;
-        color: #777872;
+        color: #E9F2E1;
         text-shadow: 0 0 20px #333;
       }
       .inverse h1, .inverse h2 {
@@ -87,6 +91,13 @@
       .logo {
         width: 50%;
         display: inline-block;
+      }
+
+      .side_img {
+        display: inline-block;
+        position: absolute;
+        top: 30%;
+        right: 2em;
       }
 
       .small_img {
